--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,5 @@
-RewriteEngine On
+RewriteEngine on
+RewriteCond %{REQUEST_URI} !index.php
+## if the request is not for a valid file
+RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^what-we-do/logistics?$ logisics.php
