seo friendly url

--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine on
 RewriteCond %{REQUEST_URI} !index.php
 ## if the request is not for a valid file
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^what-we-do/logistics?$ logisics.php
+RewriteRule ^what-we-do/logistics?$ logisics.php [NC,L]
